[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["Liam O'Brien <liam.obrien@atteris.com>"]

[tool.poetry.dependencies]
python = "^3.10"
windows-curses = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
